--- a/Random Password Generator/index.html
+++ b/Random Password Generator/index.html
@@ -19,6 +19,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Random Password Generator</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="images/password.png">
 </head>
 <body>
     <div class="container">
