--- a/Age Calculator/index.html
+++ b/Age Calculator/index.html
@@ -1,4 +1,19 @@
-<!DOCTYPE html>
+<!-- 
+    File: Age Calculator
+    Author: Ishaan Singh
+    Date: 26/01/2024
+
+    Description:
+    ------------
+    The functionality of the code is to calculate the age 
+    according to the input given on calender as birth date
+
+    Contact Information:
+    --------------------
+    ishaan.singh2k@gmail.com
+ -->
+ 
+ <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
